--- a/en/index.html
+++ b/en/index.html
@@ -26,13 +26,12 @@
         <nav> 
           <div class="menuinner">
             <ul class="menu2">
-              <li><a href="/#SOLUTION"> SOLUTION   </a></li>
               <li><a href="/#WORKS"> WORKS   </a></li>
               <li><a href="/#PROFILE"> PROFILE   </a></li>
               <li><a href="/#ACCESS"> ACCESS</a></li>
             </ul>
             <ul class="menu1">
-              <li class="link-lang"><a href="#a"> Japanese  </a><span> /</span><a href="#a"> English</a></li>
+              <li class="link-lang"><a href="/"> Japanese  </a><span> /</span><a href="/en/"> English</a></li>
               <li class="contact"><a href="mailto:inquirly@theoria.ne.jp"> CONTACT  </a></li>
             </ul>
           </div>
@@ -44,8 +43,9 @@
         <div class="inner">
           <div class="txt">
             <h2>Execution Centric,<br/>Contents Oriented.</h2>
-            <p class="sub-catch"> 戦略を確実に実行して、<br class="sp"/>結果を導くこと。</p>
-            <p class="lead-txt">いかに優れた戦略も、実行力なしでは成功を得られません。時間をかけて、検討を重ねて構築した戦略が、一瞬のひらめきによるスピーディーな戦術に追い越される。ITに始まるコミュニケーション技術の進化は、これまでの競争概念を大きく変えようとしています。我々は、ビジネスやプロジェクトの目的を合理的に整理し、深化させ、到達すべきゴールへの最短距離を「理論」ではなく「実践」で導き出します。あらゆるメディアとコミュニケーションアセットに精通したチームが、企業と人をつなぐマーケティングを実現します。</p>
+            <p class="sub-catch en"> Strategic Approach with Solid Management.</p>
+            <p class="lead-txt">In the rapidly changing marketing landscape of today, it’s crucial to be able to have a very swift approach to communication activities and be ready to adapt promptly for new conditions. This is something many complicated marketing strategies developed ages ago aren’t prepared for while the evolution of ICT (Information Communication Technology) leads to a paradigm shift in the way brands compete.<br>
+Brands need to be prepared to meet the consumers’ instant needs with quick ideas and quick solid executions.</p>
           </div>
           <div class="img"><img src="/assets/images/main.png"/></div>
         </div>
@@ -77,7 +77,7 @@
           <p class="txt2">我々は“実践知”を集結させたマーケティングチームです。<br/>課題を文脈から本質的に読み解き、<br/>最良のコンテンツを創出します。</p>
         </div>
       </section>
-      <section class="sec2" id="SOLUTION">
+      <section class="sec2 en" id="SOLUTION">
         <div class="inner">
           <h2 class="title1">SOLUTION</h2>
           <ul>
