--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="テオリアコミュニケーションズは、ビジネスと顧客をつなぐコミュニケーションをデザインします。"/>
     <meta property="og:type" content="wesite"/>
     <meta property="og:url" content="https://www.theoria.ne.jp"/>
-    <link href="/assets/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="/assets/css/style.css?20181113" rel="stylesheet" type="text/css" media="all"/>
     <script type="text/javascript" src="/assets/js/plugin.js"></script>
     <script type="text/javascript" src="/assets/js/script.js"></script>
   </head>
@@ -32,7 +32,7 @@
               <li><a href="/#ACCESS"> ACCESS</a></li>
             </ul>
             <ul class="menu1">
-              <li class="link-lang"><a href="#a"> Japanese  </a><span> /</span><a href="#a"> English</a></li>
+              <li class="link-lang"><a href="/"> Japanese  </a><span> /</span><a href="/en/"> English</a></li>
               <li class="contact"><a href="mailto:inquirly@theoria.ne.jp"> CONTACT  </a></li>
             </ul>
           </div>
