--- a/en/index.html
+++ b/en/index.html
@@ -43,26 +43,25 @@
         <div class="inner">
           <div class="txt">
             <h2>Execution Centric,<br/>Contents Oriented.</h2>
-            <p class="sub-catch en"> Strategic Approach with Solid Management.</p>
-            <p class="lead-txt">In the rapidly changing marketing landscape of today, it’s crucial to be able to have a very swift approach to communication activities and be ready to adapt promptly for new conditions. This is something many complicated marketing strategies developed ages ago aren’t prepared for while the evolution of ICT (Information Communication Technology) leads to a paradigm shift in the way brands compete.<br>
-Brands need to be prepared to meet the consumers’ instant needs with quick ideas and quick solid executions.</p>
+            <p class="sub-catch en"> Strategic Approach <br class="sp">with Solid Management.</p>
+            <p class="lead-txt">In the rapidly changing marketing landscape<br class="sp"/> of today, it’s crucial to <br class="pc"/>be able to have a very swift approach to communication activities and <br class="pc"/>be ready to adapt promptly for new conditions. This is something many complicated marketing strategies developed ages ago aren’t prepared for while the evolution of ICT (Information Communication Technology) leads to a paradigm shift in the way brands compete.<br>Brands need to be prepared to meet the consumers’ instant needs<br class="pc"/> with quick ideas<br class="sp"> and quick solid executions.</p>
           </div>
           <div class="img"><img src="/assets/images/main.png"/></div>
         </div>
         <div class="service-box">
-          <h3> THEORIAの核となるサービス</h3>
+          <h3> Our Principles</h3>
           <ul class="service">
             <li> <img src="/assets/images/service01.svg"/>
-              <p>ホームページ運用<br/>クリエイティブ開発</p>
+              <p class="depart">Homepage Management<br/>Creative Development</p>
             </li>
             <li> <img src="/assets/images/service02.svg"/>
-              <p>コミュニティ<br/>CRM開発・運用</p>
+              <p class="depart">Community Management<br/>CRM Management</p>
             </li>
             <li> <img src="/assets/images/service03.svg"/>
-              <p>企画・コンサルティング<br/>サービス開発</p>
+              <p class="depart">Business consulting of planning and developing business models.</p>
             </li>
             <li> <img src="/assets/images/service04.svg"/>
-              <p>アプリ開発・運用<br/>システム開発・運用</p>
+              <p class="depart">Apps &amp; System Management</p>
             </li>
           </ul>
         </div>
@@ -71,9 +70,9 @@ Brands need to be prepared to meet the consumers’ instant needs with quick ide
         <div class="inner">
           <h2 class="title1">STYLE</h2>
           <div class="logobox"><img src="/assets/images/logo.svg"/></div>
-          <p class="txt1">ギリシア語で“客体観照 ”を意味する語で、“理論・学説・正論”を意味するTheoryの語源です。<br/>当社では、“Execution Centric, Contents Oriented”をテーマに、<br class="pc"/>最適な方法で最適な解答をクライアントに提供する、<br/>マーケティングコンサルテーションを中核としたビジネスを展開しています。</p>
+          <p class="txt1">In Greek it means a word "object viewing", which is the<br class="pc"/> etymology of Theory meaning "theory, theory and justice".<br/>At our company, with the theme of "Execution Centric, Contents Oriented"<br/>Provide the client with the optimal answer in an optimal way,<br/>We are developing a business centered on marketing consultation.</p>
           <h2 class="title1 t2">MISSION</h2>
-          <p class="catch">コンテンツを通じて、<br/>人、企業、社会を<br class="sp"/>豊かにする</p>
+          <p class="catch">Enrich people,<br/> businesses,<br/> and society through CONTENTS</p>
           <p class="txt2">我々は“実践知”を集結させたマーケティングチームです。<br/>課題を文脈から本質的に読み解き、<br/>最良のコンテンツを創出します。</p>
         </div>
       </section>
@@ -119,74 +118,73 @@ Brands need to be prepared to meet the consumers’ instant needs with quick ide
           <h2 class="title1">WORKS</h2>
           <ul class="service">
             <li class="works"><span><img src="/assets/images/service01.svg"/>
-                <p>ホームページ運用<br/>クリエイティブ開発</p></span>
+                <p class="depart">Homepage Management<br/>Creative Development</p></span>
               <ul>
                 <li> ・SUBARU</li>
-                <li> ・味の素コーポレートサイト</li>
-                <li> ・トリナ・ソーラーコーポレートサイト</li>
-                <li> ・フィールズIRサイト</li>
-                <li> ・ 野村不動産（ノムコム）</li>
-                <li> ・ 野村不動産（法人サイト）</li>
-                <li> ・シグマクシスコーポレートサイト</li>
-                <li> ・ 西陣 コーポレートサイト</li>
-                <li> ・ Play Station Series</li>
-                <li> ・ YKKap コーポレートサイト</li>
-                <li> ・ 星野 リゾート ｸﾞﾛｰﾊﾞﾙｻｲﾄ</li>
-                <li> ・ スカパーオンデマンド</li>
-                <li> ・ﾌｫｯｸｽｲﾝﾀｰﾅｼｮﾅﾙﾁｬﾝﾈﾙ</li>
-                <li> ・ナショナルジオグラフィック</li>
+                <li> ・ajinomoto.com</li>
+                <li> ・Trina Solar Japan</li>
+                <li> ・Fields Investor Relations</li>
+                <li> ・Nomura Real Estate（nomu.com）</li>
+                <li> ・Sigmaxyz.com</li>
+                <li> ・nishijin.co.jp</li>
+                <li> ・Play Station Series</li>
+                <li> ・ykkap.co.jp</li>
+                <li> ・hoshinresort.com</li>
+                <li> ・Fox International channels Japan</li>
+                <li> ・National Geographic</li>
               </ul>
             </li>
             <li class="works"><span><img src="/assets/images/service02.svg"/>
-                <p>コミュニティ<br/>CRM開発・運用</p></span>
+                <p class="depart">Community Management<br/>CRM Management</p></span>
               <ul>
-                <li> ・スバルWEBコミュニティ</li>
+                <li> ・members.subaru.jp</li>
                 <li> ・subaru.jp</li>
-                <li> ・ﾘｰﾊﾞｲ・ｽﾄﾗｳｽ ｼﾞｬﾊﾟﾝ</li>
-                <li> ・Tamago Land(たまごっち)</li>
+                <li> ・Levi’s (CLUB LEVI’S)</li>
+                <li> ・Tamago Land (TAMAGOTCHI)</li>
               </ul>
             </li>
             <li class="works"><span><img src="/assets/images/service03.svg"/>
-                <p>企画・コンサルティング<br/>サービス開発</p></span>
+                <p class="depart">Business consulting of planning and<br/> developing business models.</p></span>
               <ul>
-                <li> ・貝印 Xfitﾏｰｹﾃｨﾝｸﾞ戦略</li>
-                <li> ・貝印 ECサイト</li>
-                <li> ・ﾄﾘﾅ・ｿｰﾗｰｼﾞｬﾊﾟﾝ</li>
+                <li> ・KAI Xfit Marketing Strategy</li>
+                <li> ・KAI E-Commerce</li>
+                <li> ・Trina Solar Japan</li>
                 <li> ・MIYAGI POKERUN</li>
-                <li> ・AEON ミサンガプロジェクト</li>
-                <li> ・ ル・クルーゼ ECサイト</li>
+                <li> ・AEON CSR Project</li>
+                <li> ・LE CREUSET E-Commerce</li>
               </ul>
             </li>
             <li class="works"> <span><img src="/assets/images/service04.svg"/>
-                <p>アプリ開発・運用<br/>システム開発・運用</p></span>
+                <p class="depart">Apps &amp; System <br/>Management</p></span>
               <ul>
-                <li> ・ﾄﾘﾅ・ｿｰﾗｰ 発電ｼﾐｭﾚｰﾀｰ</li>
-                <li> ・CLUB LEVI’S ｽﾏﾎｻｲﾄ</li>
-                <li> ・ エイベックス ファンクラブ</li>
+                <li> ・Trina Solar Japan Power Generation Simulator</li>
+                <li> ・Audi Japan Roadside Assistance</li>
+                <li> ・CLUB LEVI’S</li>
+                <li>・Avex Fan Club</li>
               </ul>
             </li>
           </ul>
-          <p class="other">国内外ブランドを問わず多数の実績があります。<br/><a href="#">実績集ダウンロード（PDFファイル）</a></p>
+          <p class="other">We have many experiences through various industries.<br/><a href="#">WORKS file (.pdf Japanese Only）</a></p>
         </div>
       </section>
       <section class="sec4" id="PROFILE">
         <div class="inner">
           <h2 class="title1">COMPANY PROFILE</h2>
           <dl class="company">
-            <dt> 会社名</dt>
-            <dd> テオーリアコミュニケーションズ株式会社（Ｐマーク登録事業者 登録番号：170001800）<br/>〒105-0011　東京都港区 芝公園3-6-22  J.C.ビルディング4階</dd>
-            <dt> 役員</dt>
-            <dd> <span> 代表取締役社長</span>小島　丈司<br/> <span> 取締役</span>上保　大輔</dd>
-            <dt> 資本金</dt>
-            <dd> 50,010,000円</dd>
-            <dt> 電話番号</dt>
-            <dd> 代表電話番号  03-6841-6007   /   FAX  03-6841-6032</dd>
-            <dt> 取引銀行</dt>
-            <dd> 三井住友銀行日比谷支店, りそな銀行渋谷支店, 東日本銀行浜松町支店</dd>
-            <dt> 主要取引先(五十音順)</dt>
-            <dd> 味の素株式会社/株式会社ＳＵＢＡＲＵ/貝印株式会社/株式会社シグマクシス/ソニー・コンピュータエンタテインメント株式会社/トリナ・ソーラー・ジャパン株式会社/野村不動産株式会社/野村不動産アーバンネット株式会社/株式会社バンダイナムコゲームス/フィールズ株式会社/FOXインターナショナル・チャンネルズ株式会社/リーバイ・ストラウス ジャパン株式会社/株式会社ＪＥＲＡ<br/>ほか多数</dd>
-            <dt> 広告代理店<br class="pc"/><span class="sp">・</span>主要取引先</dt>
-            <dd> 株式会社電通<br/>株式会社博報堂<br/>株式会社アサツー・ディー・ケイ<br/>ほか</dd>
+            <dt> Company Name</dt>
+            <dd> Theoria Communications Co., Inc. (Registered company: 170001800<br/>3-6-22, Shibakouen J.C.Bidg 4th Floor , Minato-ku, Tokyo 105-0011, Japan</dd>
+            <dt> Officer</dt>
+            <dd> CEO Joji Kojima<br/>&ensp;&ensp;&ensp;&ensp;&nbsp;Daisuke Uwabo</dd>
+            <dt> Paid-in Capital</dt>
+            <dd> 50,010,000 JPY</dd>
+            <dt> Phone</dt>
+            <dd> +81 3 6841 6007 / Fax: +81 3 6841 6032</dd>
+            <dt> Bank</dt>
+            <dd> Sumitomo Mitsui Banking Corporation / Resona Bank, Limited / The Higashi-Nippon Bank, Limited</dd>
+            <dt> Client (AtoZ)</dt>
+            <dd> Ajinomoto Co., Inc. / JERA Co., Inc. / Kai Corporation / NAMCO BANDAI Holdings Inc. / SIGMAXYZ Inc. / Levi Strauss japan K.K. / Sony Corporation / Sony Computer Entertainment inc. / SUBARU CORPORATION<br/>and Many others…</dd>
+            <dt> Agencies</dt>
+            <dd> Dentsu inc.<br/>HAKUHODO Inc.<br/>ASATSU-DK INC (ADKD)<br/>and others..</dd>
           </dl>
         </div>
       </section>
@@ -198,14 +196,18 @@ Brands need to be prepared to meet the consumers’ instant needs with quick ide
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.4335553846645!2d139.74002461525833!3d35.66632518019791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b99a2c583ab%3A0xa973d8564cdf1d95!2z77yq77yw44Kz44Of44Ol44OL44Kx44O844K344On44Oz44K65qCq5byP5Lya56S-!5e0!3m2!1sja!2sjp!4v1541999568405" width="600" height="450" frameborder="0" style="border:0" allowfullscreen="allowfullscreen"></iframe>
             </div>
             <div class="txt">
-              <h3> 所在地</h3>
-              <p>〒105-0011 <br/>東京都港区芝公園3-6-22　J.C.ビルディング4F</p>
-              <h3> アクセス</h3>
+              <h3> Location</h3>
+              <p>3-6-22, Shibakouen J.C.Bidg 4th Floor , Minato-ku, Tokyo 105-0011, Japan</p>
+              <h3> Access</h3>
               <dl>
-                <dt> 東京メトロ日比谷線神谷町駅より</dt>
-                <dd> 1番出口を出て左方面、<br/>桜田通り沿いに東京タワー方面へ<br/>飯倉の交差点を左折<br/>坂を上りきった信号の左角のビル4Fです。</dd>
-                <dt> 都営大江戸線赤羽橋駅より</dt>
-                <dd> 赤羽橋口を出て横断歩道を渡り、<br/>桜田通り沿いを神谷町方面へ<br/>坂を上った交差点をセブンイレブン側へ渡り、<br/>さらに東京タワーに向かって渡ります。<br/>坂を上りきった信号の左角のビル4Fです。</dd>
+                <dt> From Tokyo Metro Hibiya Line Kamiyacho</dt>
+                <dd>Leave exit 1; and along the left area, the<br class="pc"/> Sakurada Street to the Tokyo Tower area.<br/>Turn left the Iikura intersection.<br/>
+                  Please walk towards Tokyo Tower. Office is located at the first intersection.
+</dd>
+                <dt> From Ooedo Line Akabanebashi</dt>
+                <dd> Leave "Akabane Hashiguchi", and cross<br/> the large step sidewalk. Then through the Sakurada Street to the Kamiyacho area.<br/>
+                Turn left the Iikura intersection.<br/>
+                Please walk towards Tokyo Tower. Office<br class="pc"/> is located at the first intersection.</dd>
               </dl>
             </div>
           </div>
@@ -213,21 +215,21 @@ Brands need to be prepared to meet the consumers’ instant needs with quick ide
       </section>
       <section class="sec6">
         <div class="inner">
-          <h2 class="title1">CONTACT<span class="sub"> 気軽にご相談ください </span></h2>
+          <h2 class="title1">CONTACT</h2>
           <div class="img"><a href="mailto:inquirly@theoria.ne.jp"><img src="/assets/images/contact.svg"/></a></div>
           <div class="service-box">
             <ul>
               <li> <img src="/assets/images/contact01.svg"/>
-                <p>ホームページ運用<br/>クリエイティブ開発</p>
+                <p class="depart">Homepage Management<br/>Creative Development</p>
               </li>
               <li> <img src="/assets/images/contact02.svg"/>
-                <p>コミュニティ<br/>CRM開発・運用</p>
+                <p class="depart">Community Management<br/>CRM Management</p>
               </li>
               <li> <img src="/assets/images/contact03.svg"/>
-                <p>企画・コンサルティング<br/>サービス開発</p>
+                <p class="depart">Business consulting of planning and<br/> developing business models.</p>
               </li>
               <li> <img src="/assets/images/contact04.svg"/>
-                <p>アプリ開発・運用<br/>システム開発・運用</p>
+                <p class="depart">Apps &amp; System Management</p>
               </li>
             </ul>
           </div>
@@ -235,7 +237,7 @@ Brands need to be prepared to meet the consumers’ instant needs with quick ide
       </section>
     </div>
     <footer>
-      <div class="inner"><a href="/privacy/">個人情報保護方針</a>
+      <div class="inner"><a href="/privacy/">Privacy Policy (Japanese Only)</a>
         <p>Copyright ® Theoria Communications All Rights Reserved.</p>
       </div>
     </footer>
