--- a/en/index.html
+++ b/en/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="content-script-type" content="text/javascript"/>
     <meta http-equiv="content-script-type" content="text/css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
-    <title>テオリアコミュニケーションズ</title>
-    <meta name="description" content="テオリアコミュニケーションズは、ビジネスと顧客をつなぐコミュニケーションをデザインします。"/>
+    <title>Theoria Communications Co., Inc. </title>
+    <meta name="description" content="Theoria Communications Co., Inc. は、ビジネスと顧客をつなぐコミュニケーションをデザインします。"/>
     <meta name="keywords" content="HOME,テオリア,theoria"/>
     <!-- OGs-->
-    <meta property="og:title" content="テオリアコミュニケーションズ"/>
-    <meta property="og:site_name" content="テオリアコミュニケーションズ"/>
-    <meta property="og:description" content="テオリアコミュニケーションズは、ビジネスと顧客をつなぐコミュニケーションをデザインします。"/>
+    <meta property="og:title" content="Theoria Communications Co., Inc. "/>
+    <meta property="og:site_name" content="Theoria Communications Co., Inc. "/>
+    <meta property="og:description" content="Theoria Communications Co., Inc. は、ビジネスと顧客をつなぐコミュニケーションをデザインします。"/>
     <meta property="og:type" content="wesite"/>
     <meta property="og:url" content="https://www.theoria.ne.jp"/>
-    <link href="/assets/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+    <link href="/assets/css/style.css?2018" rel="stylesheet" type="text/css" media="all"/>
     <script type="text/javascript" src="/assets/js/plugin.js"></script>
     <script type="text/javascript" src="/assets/js/script.js"></script>
   </head>
@@ -70,47 +70,19 @@
         <div class="inner">
           <h2 class="title1">STYLE</h2>
           <div class="logobox"><img src="/assets/images/logo.svg"/></div>
-          <p class="txt1">In Greek it means a word "object viewing", which is the<br class="pc"/> etymology of Theory meaning "theory, theory and justice".<br/>At our company, with the theme of "Execution Centric, Contents Oriented"<br/>Provide the client with the optimal answer in an optimal way,<br/>We are developing a business centered on marketing consultation.</p>
+          <p class="txt1">“THEORIA” means “action of viewing”, or “contemplation” in ancient Greek, <br>and is the word origin of “theory”.<br>
+
+ With a theme “Execution Centric, Contents Oriented”, <br>we put emphasis on marketing consultation as our core business.<br>
+
+Our approach is to provide the best possible way for your bussiness goals.</p>
           <h2 class="title1 t2">MISSION</h2>
           <p class="catch">Enrich people,<br/> businesses,<br/> and society through CONTENTS</p>
-          <p class="txt2">我々は“実践知”を集結させたマーケティングチームです。<br/>課題を文脈から本質的に読み解き、<br/>最良のコンテンツを創出します。</p>
+          <p class="txt2">We are a marketing team with accumulated wealth of practical knowledge.<br/>
+We create the best content for our clients by interpreting their business in a real world environment.</p>
         </div>
       </section>
       <section class="sec2 en" id="SOLUTION">
-        <div class="inner">
-          <h2 class="title1">SOLUTION</h2>
-          <ul>
-            <li><span><img src="/assets/images/solution01.svg"/>
-                <p>頼んだタスクしか<br/>担当してくれない</p></span></li>
-            <li><span><img src="/assets/images/solution02.svg"/>
-                <p>若手だけが<br/>アサインされる</p></span></li>
-            <li><span><img src="/assets/images/solution03.svg"/>
-                <p>納期は守ってくれるが<br/>品質が良くない</p></span></li>
-            <li><span><img src="/assets/images/solution04.svg"/>
-                <p>原稿やレイアウトは<br/>自分で作っている</p></span></li>
-            <li><span><img src="/assets/images/solution05.svg"/>
-                <p>ビジネスの悩みは<br/>相談できない</p></span></li>
-            <li><span><img src="/assets/images/solution06.svg"/>
-                <p>細部まで<br/>指示が必要</p></span></li>
-            <li><span><img src="/assets/images/solution07.svg"/>
-                <p>マーケティング上の<br/>必然性が感じられない</p></span></li>
-            <li><span><img src="/assets/images/solution08.svg"/>
-                <p>デザインは<br/>別の業者に発注</p></span></li>
-          </ul>
-          <div class="img"><img src="/assets/images/solution_main.svg"/><span class="circle1"></span><span class="circle2"></span><span class="circle3"></span></div>
-        </div>
         <div class="sec2-2">
-          <div class="sec2-2-inner">
-            <div class="feature"><span class="img1"><img src="/assets/images/solution2_sub.svg"/></span><span class="img2"><img src="/assets/images/solution2_main.svg"/></span><span class="img3"><img src="/assets/images/solution2_txt.svg"/></span></div>
-            <ul class="feature-list">
-              <li><span><img src="/assets/images/solution2_01.svg"/>
-                  <p>経験豊富なスタッフを取り込む<br/><strong> 品質感 </strong>と <strong> 能動性</strong></p></span></li>
-              <li><span><img src="/assets/images/solution2_02.svg"/>
-                  <p>個々のタレント性に体系化された<br/><strong> ワークフロー </strong></p></span></li>
-              <li><span><img src="/assets/images/solution2_03.svg"/>
-                  <p>ビジネスにコミットした<br/><strong> パートナー性 </strong></p></span></li>
-            </ul>
-          </div>
         </div>
       </section>
       <section class="sec3" id="WORKS">
@@ -164,7 +136,7 @@
               </ul>
             </li>
           </ul>
-          <p class="other">We have many experiences through various industries.<br/><a href="#">WORKS file (.pdf Japanese Only）</a></p>
+          <p class="other">We have many experiences through various industries.<br/><a href="../works.pdf" target="_blank">WORKS file (.pdf Japanese Only. File size;23.4MB）</a></p>
         </div>
       </section>
       <section class="sec4" id="PROFILE">
@@ -193,7 +165,7 @@
           <h2 class="title1">ACCESS</h2>
           <div class="mapbox">
             <div class="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.4335553846645!2d139.74002461525833!3d35.66632518019791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b99a2c583ab%3A0xa973d8564cdf1d95!2z77yq77yw44Kz44Of44Ol44OL44Kx44O844K344On44Oz44K65qCq5byP5Lya56S-!5e0!3m2!1sja!2sjp!4v1541999568405" width="600" height="450" frameborder="0" style="border:0" allowfullscreen="allowfullscreen"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1620.8506233685828!2d139.74330090968814!3d35.65973158041643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b97c9b572f3%3A0xd8d1aefb74c5a979!2z44CSMTA1LTAwMTEg5p2x5Lqs6YO95riv5Yy66Iqd5YWs5ZyS77yT5LiB55uu77yW4oiS77yS77yS!5e0!3m2!1sja!2sjp!4v1542358807751" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="txt">
               <h3> Location</h3>
