--- a/en/index.html
+++ b/en/index.html
@@ -144,17 +144,17 @@ We create the best content for our clients by interpreting their business in a r
           <h2 class="title1">COMPANY PROFILE</h2>
           <dl class="company">
             <dt> Company Name</dt>
-            <dd> Theoria Communications Co., Inc. (Registered company: 170001800<br/>3-6-22, Shibakouen J.C.Bidg 4th Floor , Minato-ku, Tokyo 105-0011, Japan</dd>
+            <dd> Theoria Communications Co., Inc. (<a href="https://privacymark.org">Privacy Mark</a> Registration Number: 17001800)<br/>J.C. Bldg, 4th floor, 3-6-22 Shibakoen, Minato-ku, Tokyo 105-0011, Japan </dd>
             <dt> Officer</dt>
             <dd> CEO Joji Kojima<br/>&ensp;&ensp;&ensp;&ensp;&nbsp;Daisuke Uwabo</dd>
             <dt> Paid-in Capital</dt>
             <dd> 50,010,000 JPY</dd>
             <dt> Phone</dt>
             <dd> +81 3 6841 6007 / Fax: +81 3 6841 6032</dd>
-            <dt> Bank</dt>
+            <dt> Main Banks</dt>
             <dd> Sumitomo Mitsui Banking Corporation / Resona Bank, Limited / The Higashi-Nippon Bank, Limited</dd>
             <dt> Client (AtoZ)</dt>
-            <dd> Ajinomoto Co., Inc. / JERA Co., Inc. / Kai Corporation / NAMCO BANDAI Holdings Inc. / SIGMAXYZ Inc. / Levi Strauss japan K.K. / Sony Corporation / Sony Computer Entertainment inc. / SUBARU CORPORATION<br/>and Many others…</dd>
+            <dd> Ajinomoto Co., Inc. / JERA Co., Inc. / Kai Corporation / BANDAI NAMCO Entertainment Inc. / SIGMAXYZ Inc. / Levi Strauss japan K.K. / Sony Corporation / Sony Computer Entertainment inc. / SUBARU CORPORATION<br/>and Many others…</dd>
             <dt> Agencies</dt>
             <dd> Dentsu inc.<br/>HAKUHODO Inc.<br/>ASATSU-DK INC (ADKD)<br/>and others..</dd>
           </dl>
@@ -169,17 +169,15 @@ We create the best content for our clients by interpreting their business in a r
             </div>
             <div class="txt">
               <h3> Location</h3>
-              <p>3-6-22, Shibakouen J.C.Bidg 4th Floor , Minato-ku, Tokyo 105-0011, Japan</p>
+              <p>J.C. Bldg, 4th floor, 3-6-22 Shibakoen, Minato-ku, Tokyo 105-0011, Japan </p>
               <h3> Access</h3>
               <dl>
                 <dt> From Tokyo Metro Hibiya Line Kamiyacho</dt>
-                <dd>Leave exit 1; and along the left area, the<br class="pc"/> Sakurada Street to the Tokyo Tower area.<br/>Turn left the Iikura intersection.<br/>
-                  Please walk towards Tokyo Tower. Office is located at the first intersection.
-</dd>
+                <dd>Leave exit 1, and walk along the Sakurada Street towards the Tokyo Tower. Turn left at the Iikura intersection, and walk another block. The office is located at the first intersection.
+                </dd>
                 <dt> From Ooedo Line Akabanebashi</dt>
-                <dd> Leave "Akabane Hashiguchi", and cross<br/> the large step sidewalk. Then through the Sakurada Street to the Kamiyacho area.<br/>
-                Turn left the Iikura intersection.<br/>
-                Please walk towards Tokyo Tower. Office<br class="pc"/> is located at the first intersection.</dd>
+                <dd> Leave “Akabanebashi Higashiguchi” exit, and cross the large intersection. Then walk along the Sakurada Street towards Kamiyacho area. <br/>Turn right at the Iikura insersection towards the Tokyo Tower and walk another block. The office is located at the first intersection.
+                </dd>
               </dl>
             </div>
           </div>
