--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="inner">
           <h2 class="title1">STYLE</h2>
           <div class="logobox"><img src="/assets/images/logo.svg"/></div>
-          <p class="txt1">ギリシア語で“客体観照 ”を意味する語で、“理論・学説・正論”を意味するTheoryの語源です。<br/>当社では、“Execution Centric, Contents Oriented”をテーマに、<br class="pc"/>最適な方法で最適な解答をクライアントに提供する、<br/>マーケティングコンサルテーションを中核としたビジネスを展開しています。</p>
+          <p class="txt1">ギリシア語で“客体観照”を意味する語で、“理論・学説・正論”を意味するTheoryの語源です。<br/>当社では、“Execution Centric, Contents Oriented”をテーマに、<br class="pc"/>最適な方法で最適な解答をクライアントに提供する、<br/>マーケティングコンサルテーションを中核としたビジネスを展開しています。</p>
           <h2 class="title1 t2">MISSION</h2>
           <p class="catch">コンテンツを通じて、<br/>人、企業、社会を<br class="sp"/>豊かにする</p>
           <p class="txt2">我々は“実践知”を集結させたマーケティングチームです。<br/>課題を文脈から本質的に読み解き、<br/>最良のコンテンツを創出します。</p>
@@ -174,7 +174,7 @@
           <h2 class="title1">COMPANY PROFILE</h2>
           <dl class="company">
             <dt> 会社名</dt>
-            <dd> テオーリアコミュニケーションズ株式会社（Ｐマーク登録事業者 登録番号：170001800）<br/>〒105-0011　東京都港区 芝公園3-6-22  J.C.ビルディング4階</dd>
+            <dd> テオーリアコミュニケーションズ株式会社（<a href="https://privacymark.jp/">Ｐマーク登録事業者</a> 登録番号：17001800）<br/>〒105-0011　東京都港区 芝公園3-6-22  J.C.ビルディング4階</dd>
             <dt> 役員</dt>
             <dd> <span> 代表取締役社長</span>小島　丈司<br/> <span> 取締役</span>上保　大輔</dd>
             <dt> 資本金</dt>
@@ -184,7 +184,7 @@
             <dt> 取引銀行</dt>
             <dd> 三井住友銀行日比谷支店, りそな銀行渋谷支店, 東日本銀行浜松町支店</dd>
             <dt> 主要取引先(五十音順)</dt>
-            <dd> 味の素株式会社/株式会社ＳＵＢＡＲＵ/貝印株式会社/株式会社シグマクシス/ソニー・コンピュータエンタテインメント株式会社/トリナ・ソーラー・ジャパン株式会社/野村不動産株式会社/野村不動産アーバンネット株式会社/株式会社バンダイナムコゲームス/フィールズ株式会社/FOXインターナショナル・チャンネルズ株式会社/リーバイ・ストラウス ジャパン株式会社/株式会社ＪＥＲＡ<br/>ほか多数</dd>
+            <dd> 味の素株式会社/株式会社ＳＵＢＡＲＵ/貝印株式会社/株式会社シグマクシス/ソニー・コンピュータエンタテインメント株式会社/トリナ・ソーラー・ジャパン株式会社/野村不動産株式会社/野村不動産アーバンネット株式会社/株式会社バンダイナムコエンターテインメント/フィールズ株式会社/FOXインターナショナル・チャンネルズ株式会社/リーバイ・ストラウス ジャパン株式会社/株式会社ＪＥＲＡ<br/>ほか多数</dd>
             <dt> 広告代理店<br class="pc"/><span class="sp">・</span>主要取引先</dt>
             <dd> 株式会社電通<br/>株式会社博報堂<br/>株式会社アサツー・ディー・ケイ<br/>ほか</dd>
           </dl>
