--- a/en/index.html
+++ b/en/index.html
@@ -144,7 +144,7 @@ We create the best content for our clients by interpreting their business in a r
           <h2 class="title1">COMPANY PROFILE</h2>
           <dl class="company">
             <dt> Company Name</dt>
-            <dd> Theoria Communications Co., Inc. (<a href="https://privacymark.org">Privacy Mark</a> Registration Number: 17001800)<br/>J.C. Bldg, 4th floor, 3-6-22 Shibakoen, Minato-ku, Tokyo 105-0011, Japan </dd>
+            <dd> Theoria Communications Co., Inc. (<a href="https://privacymark.org" target="_blank">Privacy Mark</a> Registration Number: 17001800)<br/>J.C. Bldg, 4th floor, 3-6-22 Shibakoen, Minato-ku, Tokyo 105-0011, Japan </dd>
             <dt> Officer</dt>
             <dd> CEO Joji Kojima<br/>&ensp;&ensp;&ensp;&ensp;&nbsp;Daisuke Uwabo</dd>
             <dt> Paid-in Capital</dt>
