--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <h2 class="title1">COMPANY PROFILE</h2>
           <dl class="company">
             <dt> 会社名</dt>
-            <dd> テオーリアコミュニケーションズ株式会社（<a href="https://privacymark.jp/">Ｐマーク登録事業者</a> 登録番号：17001800）<br/>〒105-0011　東京都港区 芝公園3-6-22  J.C.ビルディング4階</dd>
+            <dd> テオーリアコミュニケーションズ株式会社（<a href="https://privacymark.jp/" target="_blank">Ｐマーク登録事業者</a> 登録番号：17001800）<br/>〒105-0011　東京都港区 芝公園3-6-22  J.C.ビルディング4階</dd>
             <dt> 役員</dt>
             <dd> <span> 代表取締役社長</span>小島　丈司<br/> <span> 取締役</span>上保　大輔</dd>
             <dt> 資本金</dt>
